--- a/Src/Views.xib
+++ b/Src/Views.xib
@@ -12,17 +12,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="rpt-5Z-dCL">
-            <rect key="frame" x="0.0" y="0.0" width="35" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="36" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <state key="normal" title="取消">
+            <state key="normal" title="随机">
                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             </state>
             <point key="canvasLocation" x="-559" y="-46"/>
         </button>
         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="EY5-Xz-AkL">
-            <rect key="frame" x="0.0" y="0.0" width="46" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="36" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <state key="normal" title="下一步">
+            <state key="normal" title="提醒">
                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             </state>
             <point key="canvasLocation" x="-552" y="23"/>
