--- a/Src/Views.xib
+++ b/Src/Views.xib
@@ -51,7 +51,7 @@
         <view contentMode="scaleToFill" id="mhp-35-4vf">
             <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.55454188585281372" green="0.10254456705315021" blue="0.31460367355434921" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="-533" y="264"/>
         </view>
